--- a/client/src/index.css
+++ b/client/src/index.css
@@ -48,6 +48,7 @@ a {
 
 .app-content {
   display: flex;
+  border-top: 1.5px solid #e0e0e0;
 }
 
 @keyframes fadeIn {
